[package]
name = "pwdacean"
version = "0.1.0"
authors = ["lxk <lxk@droidcraft.org>"]

[dependencies]
log = "0.3.8"
log4rs = "0.7.0"
clap = "~2.26"
rust-crypto = "^0.2"
rand = "0.3.16"
self_encryption = "0.11.1"
futures = "0.1.16"
maidsafe_utilities = "0.14.1"
rustc-serialize = "0.3.24"
serde_derive = "1.0.15"
unwrap = "~1.1.0"
serde = "~1.0.10"
rust_sodium = "~0.5.0"
tiny-keccak = "~1.3.0"